--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,44 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.box-wrap1 {
+  display: grid;
+  gap: 5px;
+
+  grid-auto-rows: 100px;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  width: 100%;
+  height: 100%;
+  background-color: bisque;
+}
+
+.box-wrap2 {
+  display: grid;
+  gap: 5px;
+
+  grid-auto-rows: 100px;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  width: 100%;
+  height: 100%;
+  background-color: darkgray;
+}
+
+.box1 {
+  background-color: red;
+  color: #ffffff;
+}
+
+.box2 {
+  background-color: blue;
+  color: #ffffff;
+}
